--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
 	
 	
 	<dependencies>	
+		
+		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>3.1.0</version>
+		    <scope>provided</scope>
+		</dependency>
 	
 		<!-- Logging -->
 		<dependency>
